[gd_scene load_steps=2 format=3 uid="uid://cvjy8eva0i78i"]

[ext_resource type="Script" path="res://scripts/levels.gd" id="1_tjaif"]

[node name="DeathScreen" type="CanvasLayer"]
script = ExtResource("1_tjaif")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
color = Color(3.72304e-05, 3.72304e-05, 3.72304e-05, 1)
metadata/_edit_use_anchors_ = true

[node name="Level_1" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 2.0
offset_top = 82.0
offset_right = 128.0
offset_bottom = 150.0
text = "Level 1"

[node name="Level_2" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 2.0
offset_top = 176.0
offset_right = 128.0
offset_bottom = 244.0
text = "Level 2
"

[node name="Basics" type="Button" parent="ColorRect"]
layout_mode = 0
offset_top = 2.0
offset_right = 127.0
offset_bottom = 64.0
text = "The basics
"

[connection signal="pressed" from="ColorRect/Level_1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="ColorRect/Level_2" to="." method="_on_button_pressed"]
[connection signal="pressed" from="ColorRect/Basics" to="." method="_on_basics_pressed"]
